@@ -39,8 +39,6 @@ Other functionnalities:
 - Create a [b|p]make refreshall to clean all files, recompile them and publish blog
 - Permit user to choose compression tool. Use ${compression} for an example with some params. Separate archive tool from compression tool. Example: tar c some_files | gzip > file.tar.gz
 - Add author URL that permit to each author to add a URL/link (this is not mandatory for posts, but could be useful for a UI
-- Permit to include an introduction in the page with a variable (in special/intro.md for an example) (as sidebar)
-- Permit to include a footer in the page with a variable (in special/footer.md for an example) (as sidebar)
 - Add a license to perso branch for Creative commons license
 
 Bugs:
@@ -168,3 +166,5 @@ DONE:
 - ELI on sidebar (or elsewhere) with param to activate/desactivate in RC file
   - complete doc for user with ELI_USER/TYPE/etc.
   - add a H2 name with "ELI" on it
+- Permit to include an introduction in the page with a variable (in special/intro.md for an example) (as sidebar)
+- Permit to include a footer in the page with a variable (in special/footer.md for an example) (as sidebar)
