@@ -100,9 +100,10 @@ Si vous voulez ajouter quelques fichiers statiques, rajoutez les simplement dans
 
 Ce dossier nommé **special** peut contenir certains fichiers que vous devrez créer pour activer une fonctionnalité : 
 
-  * //about.md// : Contient le contenu d'une page d'à propos au sujet de votre site. Cela va ajouter une entrée dans le menu principal du site (si votre thème le supporte).
-  * //sidebar.md// : Ajoute une barre latérale sur votre site. Le thème doit supporter cette fonction.
-  * //introduction.md// : Affiche le contenu de ce fichier comme introduction de votre page d'accueil. Varie selon le thème choisi.
+  * *about.md* : Contient le contenu d'une page d'à propos au sujet de votre site. Cela va ajouter une entrée dans le menu principal du site (si votre thème le supporte).
+  * *sidebar.md* : Ajoute une barre latérale sur votre site. Le thème doit supporter cette fonction.
+  * *introduction.md* : Affiche le contenu de ce fichier comme introduction de votre page d'accueil. Varie selon le thème choisi.
+  * *footer.md* : Affiche le contenu de ce fichier comme d'un pied de page sur l'ensemble de vos pages. Varie selon le thème choisi.
 
 ## Utilisez le !
 
