@@ -1,0 +1,1 @@
+${LOGO_AVAILABLE} [Logo sources](${BASE_URL}/makefly.svg)
