@@ -5,10 +5,10 @@
     <section>
       <span class="credits">
         ${POWERED_BY} <a href="http://makefly.e-mergence.org/">Makefly</a> (<a href="http://gitorious.org/makefly/" title="${SOURCE_LINK_TITLE}">${SOURCE_LINK_NAME} gitorious</a>).<br />
-        ${THEME_IS} <a href="https://github.com/Schoewilliam/Minisch">Minisch</a>
+        ${THEME_IS} <a href="https://github.com/Schoewilliam/Minisch">Minisch</a><br />
+        ${FOOTER_CONTENT}
       </span>
     </section>
-
   </footer>
 
   <!-- Script JQuery -->
