@@ -7,6 +7,8 @@ Current (0.2-dev)
 	- Update documentation
 	- Statuses from identica
 	- Introduction: permit a user to add an introduction to its website
+	- Kind of conclusion/credits/licence: permit a user to add a footer to its
+	website with all text it wants. Example: add credits to its website
 
 Version 0.1.1 (release 2013-01-17)
 	- Permit user to choose page ' suffix
